[package]
name = "quill-wr"
version = "0.1.0"
edition = "2024"


[dependencies]
gloo = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
serde-wasm-bindgen = "=0.6.5"
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"
uuid = { version = "1.18.1", features = ["v4", "js"] }
web-sys = "0.3.82"
js-sys = "0.3.82"

[lib]
name = "quill_wr"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
