[package]
name = "quill-wr"
version = "0.1.0"
edition = "2024"
authors = ["allawiii <alighraibeh87@gmail.com>"]
description = "A thin Rust→WASM wrapper around the popular Quill.js rich text editor."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ALAWIII/quill-wr"
homepage = "https://github.com/ALAWIII/quill-wr"
readme = "README.md"
keywords = ["quill", "wasm", "editor", "bindings", "rust"]
categories = ["wasm", "web-programming", "text-editors", "api-bindings"]

[dependencies]
gloo = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
serde-wasm-bindgen = "=0.6.5"
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"
uuid = { version = "1.18.1", features = ["v4", "js"] }
web-sys = "0.3.82"
js-sys = "0.3.82"

[lib]
name = "quill_wr"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
